# moonglass

./: .gitignore  CMakeLists.txt  README.md  install.sh  kwin_moonglass_config.json  moonglass.cpp  moonglass.frag  moonglass.h  moonglass.json  moonglass.kcfg  moonglass.qrc  moonglass_config.cpp  moonglass_config.h  moonglass_core.frag  moonglassconfig.kcfgc
.github/workflows/: build.yml
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.ui  main.qml
packaging/aur/: PKGBUILD
packaging/debian/: changelog  control  copyright
